# TdsBitTorrentDownloader

./: Cargo.toml  README.md  example.torrent
client/: Cargo.toml
client/src/: lib.rs  magnet.rs  main.rs  peer.rs  storage.rs
client/src/cli/: mod.rs
client/src/dht/: mod.rs
client/src/downloader/: init.rs  manager.rs  mod.rs  state.rs
client/src/peer/: mod.rs
client/src/storage/: mod.rs
tauri-ui/: index.html  package-lock.json  package.json  vite.config.js
tauri-ui/src/: main.js  styles.css
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: main.rs
tds_core/: Cargo.toml
tds_core/src/: lib.rs  rate_limit.rs
tds_core/src/bencoding/: bencode.rs  decoder.rs  info_hash.rs  info_slice.rs  mod.rs
tracker/: Cargo.toml
tracker-ui/: index.html  package.json
tracker-ui/src/: main.js  styles.css
tracker-ui/src-tauri/: Cargo.toml  tauri.conf.json
tracker-ui/src-tauri/src/: main.rs
tracker/src/: http.rs  lib.rs  main.rs  server.rs  udp.rs
