[package]
name = "tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
tds_core = { path = "../tds_core" }
reqwest = { version = "0.12", features = ["blocking"] }
url = "2.5"
rand = "0.9"
byteorder = "1.5"
form_urlencoded = "1.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
